--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,26 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>{% block title %}Bienvenido{% endblock %}</title>
+        {% block stylesheets %}
+            <link href="{{ asset('css/bulma.min.css') }}" rel="stylesheet" />
+        {% endblock %}
     </head>
     <body>
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="flash-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            <script src="{{ asset('js/main.js') }}"></script>
+            <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+        {% endblock %}
+
     </body>
 </html>
