--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Bienvenido{% endblock %}</title>
         {% block stylesheets %}
@@ -19,6 +21,7 @@
 
         {% block body %}{% endblock %}
         {% block javascripts %}
+            <script src="{{ asset('js/bulma.min.js') }}"></script>
             <script src="{{ asset('js/main.js') }}"></script>
             <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
         {% endblock %}
