--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Bienvenido{% endblock %}</title>
         {% block stylesheets %}
-            <link href="{{ asset('css/bulma.min.css') }}" rel="stylesheet" />
+            <link href="{{ asset('assets/css/bulma.min.css') }}" rel="stylesheet" />
+            <link href="{{ asset('assets/css/main.min.css') }}" rel="stylesheet" />
         {% endblock %}
     </head>
     <body>
@@ -21,8 +22,8 @@
 
         {% block body %}{% endblock %}
         {% block javascripts %}
-            <script src="{{ asset('js/bulma.min.js') }}"></script>
-            <script src="{{ asset('js/main.js') }}"></script>
+            <script src="{{ asset('assets/js/bulma.min.js') }}"></script>
+            <script src="{{ asset('assets/js/main.js') }}"></script>
             <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
         {% endblock %}
 
