--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -3,96 +3,91 @@
 {% block title %}Bienvenido {{ controller_name }}!{% endblock %}
 
 {% block body %}
-    <section class="hero is-light is-fullheight">
-        <div class="hero-head">
-            <nav class="navbar is-transparent" data-bulma="navbar">
-                <div class="navbar-brand">
-                    <a class="navbar-item" href="/">
-                        <img src="{{ asset('images/logo.png') }}" alt="Bulma: a modern CSS framework based on Flexbox" height="28">&nbsp;Sebastian
-                    </a>
-                    <div class="navbar-burger burger" data-trigger data-target="navbarTransparent">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-                <div id="navbarTransparent" class="navbar-menu">
-                    <div class="navbar-start">
-                        <a class="navbar-item" href="/">
-                            Inicio
-                        </a>
-                        <div class="navbar-item has-dropdown is-hoverable">
-                            <a class="navbar-link" href="/documentation/overview/start/">
-                                Docs
-                            </a>
-                            <div class="navbar-dropdown is-boxed">
-                                <a class="navbar-item" href="/documentation/overview/start/">
-                                    Overview
-                                </a>
-                                <a class="navbar-item" href="https://bulma.io/documentation/modifiers/syntax/">
-                                    Modifiers
-                                </a>
-                                <a class="navbar-item" href="https://bulma.io/documentation/columns/basics/">
-                                    Columns
-                                </a>
-                                <a class="navbar-item" href="https://bulma.io/documentation/layout/container/">
-                                    Layout
-                                </a>
-                                <a class="navbar-item" href="https://bulma.io/documentation/form/general/">
-                                    Form
-                                </a>
-                                <hr class="navbar-divider">
-                                <a class="navbar-item" href="https://bulma.io/documentation/elements/box/">
-                                    Elements
-                                </a>
-                                <a class="navbar-item is-active" href="https://bulma.io/documentation/components/breadcrumb/">
-                                    Components
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="navbar-end">
-                        <a class="navbar-item nav-tag">
-                            <span class="icon is-small">
-                                <i class="fas fa-envelope fa-fw"></i>
-                            </span>
-                            <span class="tag is-primary tag-notif">6</span>
-                        </a>
-                        <div class="navbar-item has-dropdown is-hoverable">
-                            <a class="navbar-link">
-                                <i class="fas fa-user fa-fw"></i>
-                                User
-                            </a>
-
-                            <div class="navbar-dropdown is-right">
-                                <a class="navbar-item">
-                                    <span class="icon is-small">
-                                        <i class="fas fa-user fa-fw"></i>
-                                    </span>
-                                    Profile
-                                </a>
-                                <hr class="navbar-divider">
-                                <a class="navbar-item">
-                                    <span class="icon is-small">
-                                        <i class="fas fa-power-off fa-fw"></i>
-                                    </span>
-                                    Logout
-                                </a>
-                            </div>
-                    </div>
-                </div>
-            </nav>
-        </div>
-        <div class="hero-body">
-            <div class="container">
-                <h1 class="title">
-                    Hero title
-                </h1>
-                <h2 class="subtitle">
-                    Hero subtitle
-                </h2>
+    <nav class="navbar is-dark" data-bulma="navbar">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="/">
+                <img src="{{ asset('assets/images/logo.png') }}" alt="Bulma: a modern CSS framework based on Flexbox" height="28">&nbsp;Sebastian
+            </a>
+            <div class="navbar-burger burger" data-trigger data-target="navbarTransparent">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
+        </div>
+        <div id="navbarTransparent" class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item" href="/">
+                    Inicio
+                </a>
+                <a class="navbar-item" href="/login">
+                    Login
+                </a>
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link" href="/documentation/overview/start/">
+                        Docs
+                    </a>
+                    <div class="navbar-dropdown is-boxed">
+                        <a class="navbar-item" href="/documentation/overview/start/">
+                            Overview
+                        </a>
+                        <a class="navbar-item" href="https://bulma.io/documentation/modifiers/syntax/">
+                            Modifiers
+                        </a>
+                        <a class="navbar-item" href="https://bulma.io/documentation/columns/basics/">
+                            Columns
+                        </a>
+                        <a class="navbar-item" href="https://bulma.io/documentation/layout/container/">
+                            Layout
+                        </a>
+                        <a class="navbar-item" href="https://bulma.io/documentation/form/general/">
+                            Form
+                        </a>
+                        <hr class="navbar-divider">
+                        <a class="navbar-item" href="https://bulma.io/documentation/elements/box/">
+                            Elements
+                        </a>
+                        <a class="navbar-item is-active" href="https://bulma.io/documentation/components/breadcrumb/">
+                            Components
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="navbar-end">
+                <a class="navbar-item nav-tag">
+                    <span class="icon is-medium badge is-badge-small" data-badge="8">
+                        <i class="fas fa-envelope"></i>
+                    </span>
+                </a>
+                &nbsp;&nbsp;
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link">
+                        <i class="fas fa-user fa-fw"></i>
+                        User
+                    </a>
+
+                    <div class="navbar-dropdown is-right">
+                        <a class="navbar-item">
+                            <span class="icon is-small">
+                                <i class="fas fa-user fa-fw"></i>
+                            </span>
+                            <span class="hide-mobile">Profile</span>
+
+                        </a>
+                        <hr class="navbar-divider">
+                        <a class="navbar-item" href="/login">
+                            <span class="icon is-small">
+                                <i class="fas fa-power-off fa-fw"></i>
+                            </span>
+                            <span class="hide-mobile">Logout</span>
+                        </a>
+                    </div>
+            </div>
+        </div>
+    </nav>
+    <section class="hero">
+        <div class="hero-body is-fullwidth">
+
         </div>
     </section>
 {% endblock %}
